MDEV-35317 Server crashes in mhnsw_insert upon using vector key on a Spider table

don't allow VECTOR indexes in SPIDER tables